[package]
name = "mint"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "*"
env_logger = "*"

bytes = "1"
tokio = { version = "1", features = ["macros", "rt", "io-util", "net", "time"] }
chacha20poly1305 = "*"
aead = { version = "*", features = ["bytes"] }
base64 = "*"

[dev-dependencies]
rand = "*"
